<resources>
    <string name="app_name">Moneytor</string>
    <string name="logo">Logo</string>
    <string name="rectangle">White rectangle acting as intermediate layer between buttons and background</string>
    <string name="login">Login</string>
    <string name="forgot_email">Send email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password? Click here.</string>
    <string name="have_account">Already have an account?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="login_button">Login</string>
    <string name="create_account">Create an account</string>
    <string name="register_txt">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_pots">Pots</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="first_name">Name</string>
    <string name="surname">Surname</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    

</resources>
