<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:backgroundTint="@color/background_blue"
    android:backgroundTintMode="screen"
    tools:context=".RegisterPage" >

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="337dp"
        android:layout_height="550dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="115dp"
        android:background="@color/white"
        android:src="@drawable/rectangle"
        android:contentDescription="@string/rectangle"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-635dp"
        android:alpha="0.75"
        app:srcCompat="@drawable/compressed_logo"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/register_title"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/login"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="#00921212"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="#197896"
        android:textColorLink="#E1D32B2B"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:ems="30"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="#48000000"
        android:contentDescription="@string/username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:alpha="0.6"
        android:ems="30"
        android:inputType="textVisiblePassword|textPassword"
        android:text="@string/password"
        android:textAlignment="center"
        android:visibility="visible"
        android:contentDescription="@string/password"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:alpha="0.6"
        android:ems="30"
        android:inputType="textVisiblePassword|textPassword"
        android:text="@string/confirm_password"
        android:textAlignment="center"
        android:visibility="visible"
        android:contentDescription="@string/confirm_password"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/link_blue"
        android:contentDescription="@string/forgot_password"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:contentDescription="@string/login_button"/>

    <TextView
        android:id="@+id/no_account"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="-81dp"
        android:layout_marginTop="60dp"
        android:text="@string/no_account"
        android:contentDescription="@string/no_account"
        android:textColor="@color/link_blue" />

    <Button
        android:id="@+id/register"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_button"
        android:text="@string/register_txt"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:contentDescription="@string/register_txt"/>

</LinearLayout>

