<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:backgroundTint="@color/background_blue"
    android:backgroundTintMode="screen"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="337dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="115dp"
        android:src="@drawable/rect"
        android:contentDescription="@string/rectangle"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-335dp"
        android:alpha="0.75"
        app:srcCompat="@drawable/compressed_logo"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="#00921212"
        android:text="Forgot Password"
        android:textAlignment="center"
        android:textColor="#197896"
        android:textColorLink="#E1D32B2B"
        android:textSize="30sp"
        android:contentDescription="@string/login"/>

    <EditText
        android:id="@+id/user"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:ems="30"
        android:hint="Enter email address"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="#48000000" />


    <Button
        android:id="@+id/forgot"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/forgot_email"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:contentDescription="@string/email"/>

</LinearLayout>

